--- a/join&support.html
+++ b/join&support.html
@@ -180,9 +180,15 @@
   </div>
 </nav>
 
-
-
-
+<!-- Container (JOIN & SUPPORT Section) -->
+<div id="contact" class="container">
+  <h3 class="text-center">JOIN & SUPPORT</h3>
+<center>
+<button type="button" class="btn btn-default">DONATE</button>
+<button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
+    </div>
+  </div>
+  <br>
 
 
 <!-- Footer -->
