--- a/events.html
+++ b/events.html
@@ -189,21 +189,21 @@
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Natalie Frank: The Brothers Grimm" width="400" height="300">
+          <img src="natalie-frank.jpg" alt="Natalie Frank: The Brothers Grimm" width="400" height="300">
           <p><strong>Natalie Frank</strong></p>
           <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="newyork.jpg" alt="Lawrence Tarpey: Figures & Ground" width="400" height="300">
+          <img src="lawerence-tarpey.jpg" alt="Lawrence Tarpey: Figures & Ground" width="400" height="300">
           <p><strong>Lawrence Tarpey</strong></p>
           <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="sanfran.jpg" alt="Camera Drama: Eugene Meatyard & Duane Michals" width="400" height="300">
+          <img src="camera-drama.jpg" alt="Camera Drama: Eugene Meatyard & Duane Michals" width="400" height="300">
           <p><strong>Camera Drama</strong></p>
           <p>May 6th 2016 - July 31st 2016</p>
         </div>
