--- a/events.html
+++ b/events.html
@@ -203,7 +203,7 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="camera-drama.jpg" alt="camera-drama" width="400" height="300">
+          <img src="camera-drama.jpg" alt="images" width="400" height="300">
           <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
           <p>May 6th 2016 - July 31st 2016</p>
         </div>
