--- a/index.html
+++ b/index.html
@@ -238,27 +238,27 @@
   <div class="container">
     <h3 class="text-center">EVENTS</h3>
 
-<h3 class="text-center">CURRENT EXHIBITIONS</h3>
-    <div class="row text-center">
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="paris.jpg" alt="Natalie Frank: The Brothers Grimm" width="400" height="300">
-          <p><strong>Natalie Frank</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="newyork.jpg" alt="Lawrence Tarpey: Figures & Ground" width="400" height="300">
-          <p><strong>Lawrence Tarpey</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="sanfran.jpg" alt="Camera Drama: Eugene Meatyard & Duane Michals" width="400" height="300">
-          <p><strong>Camera Drama</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
+    <h3 class="text-center">CURRENT EXHIBITIONS</h3>
+        <div class="row text-center">
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="natalie-frank.jpg" alt="images" width="400" height="300">
+              <p><strong>Natalie Frank</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="lawerence-tarpey.jpg" alt="images" width="400" height="300">
+              <p><strong>Lawrence Tarpey</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="camera-drama.jpg" alt="images" width="400" height="300">
+              <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
     </div>
