--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><img src="./images/logo.jpg" alt="logo" width="100" height="100"/></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -191,26 +191,25 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="ny.jpg" alt="New York" width="1200" height="700">
+        <img src="./images/current.png" alt="Current" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <h3>CHECK OUT OUR CURRENT EXHIBITIONS</h3>
+
         </div>
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
+        <img src="./images/student.png" alt="student" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3>COMPETITION: THE 2016 STUDENT EXPOSURE</h3>
+          <p>Enter your work for a chance to be showcased in the Art Museum</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
+        <img src="./images/visit.jpg" alt="visit" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+          <h3>FREE ADMISSION ALWAYS</h3>
         </div>
       </div>
     </div>
@@ -238,25 +237,29 @@
   <div class="container">
     <h3 class="text-center">EVENTS</h3>
 
+    <center> <img src="./images/calendar.jpg" alt="calendar" width="700" height="700"/> </center>
+    <br>
+
+
     <h3 class="text-center">CURRENT EXHIBITIONS</h3>
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="natalie-frank.jpg" alt="images" width="400" height="300">
+              <img src="./images/natalie-frank.jpg" alt="natalie-frank" width="400" height="300"/>
               <p><strong>Natalie Frank</strong></p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="thumbnail">
-              <img src="lawerence-tarpey.jpg" alt="images" width="400" height="300">
+          <div class="thumbnail">
+              <img src="./images/lawrence-tarpey.jpg" alt="lawrence-tarpey" width="400" height="300"/>
               <p><strong>Lawrence Tarpey</strong></p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="camera-drama.jpg" alt="images" width="400" height="300">
+              <img src="./images/camera-drama.jpg" alt="camera-drama" width="400" height="300"/>
               <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
               <p>May 6th 2016 - July 31st 2016</p>
         </div>
@@ -341,6 +344,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
 <button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
+
+<center>
+<img src="./images/facebook.png" alt="facebook" width="100" height="100"/>
+<img src="./images/twitter.png" alt="twitter" width="100" height="100"/>
+<img src="./images/instagram.png" alt="instagram" width="100" height="100"/>
+<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/> </center> 
     </div>
   </div>
   <br>
@@ -352,7 +361,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Contact the University of Kentucky Art Museum </p>
+  <p>CONTACT US </p>
+  <img src="./images/logo.jpg" alt="logo" width="100" height="100"/>
 <p>405 Rose St. <br>
 Lexington, KY 40508 </p>
 <p> 859.257.5716 </p>
