--- a/events.html
+++ b/events.html
@@ -163,7 +163,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><img src="./images/logo.jpg" alt="logo" width="100" height="100"/></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -185,27 +185,27 @@
   <div class="container">
     <h3 class="text-center">EVENTS</h3>
 
-<h3 class="text-center">CURRENT EXHIBITIONS</h3>
-    <div class="row text-center">
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="natalie-frank.jpg" alt="Natalie Frank: The Brothers Grimm" width="400" height="300">
-          <p><strong>Natalie Frank</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="lawerence-tarpey.jpg" alt="Lawrence Tarpey: Figures & Ground" width="400" height="300">
-          <p><strong>Lawrence Tarpey</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="camera-drama.jpg" alt="images" width="400" height="300">
-          <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
-          <p>May 6th 2016 - July 31st 2016</p>
+    <h3 class="text-center">CURRENT EXHIBITIONS</h3>
+        <div class="row text-center">
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="./images/natalie-frank.jpg" alt="natalie-frank" width="400" height="300"/>
+              <p><strong>Natalie Frank</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+          <div class="thumbnail">
+              <img src="./images/lawrence-tarpey.jpg" alt="lawrence-tarpey" width="400" height="300"/>
+              <p><strong>Lawrence Tarpey</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="./images/camera-drama.jpg" alt="camera-drama" width="400" height="300"/>
+              <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
+              <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
     </div>
@@ -215,37 +215,7 @@
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form">
-            <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $23 per person</label>
-              <input type="number" class="form-control" id="psw" placeholder="How many?">
-            </div>
-            <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
-              <input type="text" class="form-control" id="usrname" placeholder="Enter email">
-            </div>
-              <button type="submit" class="btn btn-block">Pay
-                <span class="glyphicon glyphicon-ok"></span>
-              </button>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-            <span class="glyphicon glyphicon-remove"></span> Cancel
-          </button>
-          <p>Need <a href="#">help?</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
