--- a/join&support.html
+++ b/join&support.html
@@ -163,7 +163,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><img src="./images/logo.jpg" alt="logo" width="100" height="100"/></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -186,6 +186,11 @@
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
 <button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
+
+<img src="./images/facebook.png" alt="facebook" width="100" height="100"/>
+<img src="./images/twitter.png" alt="twitter" width="100" height="100"/>
+<img src="./images/instagram.png" alt="instagram" width="100" height="100"/>
+<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/>
     </div>
   </div>
   <br>
