--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
 
 <center>
-<img src="./images/facebook.png" alt="facebook" width="100" height="100"/>
+<img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
 <img src="./images/twitter.png" alt="twitter" width="100" height="100"/>
 <img src="./images/instagram.png" alt="instagram" width="100" height="100"/>
-<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/> </center> 
+<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/> </center> <br>
     </div>
   </div>
   <br>
