--- a/join&support.html
+++ b/join&support.html
@@ -187,10 +187,11 @@
 <button type="button" class="btn btn-default">DONATE</button>
 <button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
 
-<img src="./images/facebook.png" alt="facebook" width="100" height="100"/>
-<img src="./images/twitter.png" alt="twitter" width="100" height="100"/>
-<img src="./images/instagram.png" alt="instagram" width="100" height="100"/>
-<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/>
+<center>
+<img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
+<img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+<img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center> 
     </div>
   </div>
   <br>
