--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme The Band</title>
+
+  <title>UK Art Museum</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -347,9 +347,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <center>
 <img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
-<img src="./images/twitter.png" alt="twitter" width="100" height="100"/>
-<img src="./images/instagram.png" alt="instagram" width="100" height="100"/>
-<img src="./images/pinterest.png" alt="pinterest" width="100" height="100"/> </center> <br>
+<img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+<img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center> <br>
     </div>
   </div>
   <br>
