--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <p>405 Rose St. <br>
 Lexington, KY 40508 </p>
 <p> 859.257.5716 </p>
+<br>
+
+<h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
 </footer>
 
 <script>
