--- a/events.html
+++ b/events.html
@@ -185,6 +185,9 @@
   <div class="container">
     <h3 class="text-center">EVENTS</h3>
 
+    <center> <img src="./images/calendar.jpg" alt="calendar" width="700" height="450"/> </center>
+    <br>
+
     <h3 class="text-center">CURRENT EXHIBITIONS</h3>
         <div class="row text-center">
           <div class="col-sm-4">
@@ -229,6 +232,9 @@
 <p>405 Rose St. <br>
 Lexington, KY 40508 </p>
 <p> 859.257.5716 </p>
+
+<h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
+
 </footer>
 
 <script>
