--- a/join&support.html
+++ b/join&support.html
@@ -191,7 +191,7 @@
 <img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
 <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
 <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
-<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center> 
+<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center>
     </div>
   </div>
   <br>
@@ -206,6 +206,9 @@
 <p>405 Rose St. <br>
 Lexington, KY 40508 </p>
 <p> 859.257.5716 </p>
+
+<h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
+
 </footer>
 
 <script>
