--- a/events.html
+++ b/events.html
@@ -193,21 +193,21 @@
           <div class="col-sm-4">
             <div class="thumbnail">
               <img src="./images/natalie-frank.jpg" alt="natalie-frank" width="400" height="300"/>
-              <p><strong>Natalie Frank</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Natalie Frank: The Brothers Grimm</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
           <div class="thumbnail">
               <img src="./images/lawrence-tarpey.jpg" alt="lawrence-tarpey" width="400" height="300"/>
-              <p><strong>Lawrence Tarpey</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/lawrence-tarpey-figures-ground"> <strong>Lawrence Tarpey: Figures & Ground</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
               <img src="./images/camera-drama.jpg" alt="camera-drama" width="400" height="300"/>
-              <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Camera Drama: Eugene Meatyard & Duane</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
@@ -230,8 +230,8 @@
   </a><br><br>
   <p>Contact the University of Kentucky Art Museum </p>
 <p>405 Rose St. <br>
-Lexington, KY 40508 </p>
-<p> 859.257.5716 </p>
+Lexington, KY 40508 <br>
+859.257.5716 </p>
 
 <h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
 
