--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="item">
         <img src="./images/visit.jpg" alt="visit" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>FREE ADMISSION ALWAYS</h3>
+          <h3>FREE ADMISSION</h3>
         </div>
       </div>
     </div>
@@ -246,21 +246,21 @@
           <div class="col-sm-4">
             <div class="thumbnail">
               <img src="./images/natalie-frank.jpg" alt="natalie-frank" width="400" height="300"/>
-              <p><strong>Natalie Frank</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Natalie Frank: The Brothers Grimm</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
           <div class="thumbnail">
               <img src="./images/lawrence-tarpey.jpg" alt="lawrence-tarpey" width="400" height="300"/>
-              <p><strong>Lawrence Tarpey</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/lawrence-tarpey-figures-ground"> <strong>Lawrence Tarpey: Figures & Ground</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
               <img src="./images/camera-drama.jpg" alt="camera-drama" width="400" height="300"/>
-              <p><strong>Camera Drama: Eugene Meatyard & Duane Michals</strong></p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Camera Drama: Eugene Meatyard & Duane</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
@@ -306,6 +306,10 @@
 <!-- Container (VISIT Section) -->
 <div id="contact" class="container">
   <h3 class="text-center">VISIT</h3>
+<center>  <P> <font color="black"> Tues. - Thu.: 10am to 5 pm <br>
+Fri.: 10am to 8 pm <br>
+Sat. - Sun.: noon to 5pm <br>
+Closed Mondays & University Holidays. </p> <center>
 
 <div id="googleMap"></div>
 
@@ -343,14 +347,22 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <h3 class="text-center">JOIN & SUPPORT</h3>
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
-<button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
-
+<button type="button" class="btn btn-default">BECOME A MEMBER</button>
+<button type="button" class="btn btn-default">GIFT SHOP</button> </center>
 <center>
-<img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
-<img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
-<img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
-<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center> <br>
-    </div>
+  <br>
+
+    <h4> <font color="white">Likes for Exposure Competition </h4>
+      <p> <font color="black"> Don't forget to submit your work for the Likes for Exposure Competition. For the month of May we are looking for work that emulates Natalie Frank. Make it your own, give it a twist, have fun and post to Instagram, tagging @UKArtMuseum with #NatalieFrankEmulation. We will then post your photo to our Facebook page. Whoever generates the most likes on Facebook and Instagram will have their work featured for the month of May in the Art Museum. Good luck! </p>
+      <br>
+<img src="./images/insta.jpg" alt="insta" width="400" height="600"/> <br>
+<br>
+    <img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
+    <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+    <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+    <img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center>
+
+</div>
   </div>
   <br>
 
@@ -364,8 +376,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <p>CONTACT US </p>
   <img src="./images/logo.jpg" alt="logo" width="100" height="100"/>
 <p>405 Rose St. <br>
-Lexington, KY 40508 </p>
-<p> 859.257.5716 </p>
+Lexington, KY 40508 <br>
+859.257.5716 </p>
 <br>
 
 <h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
