--- a/visit.html
+++ b/visit.html
@@ -184,6 +184,11 @@
 <div id="contact" class="container">
   <h3 class="text-center">VISIT</h3>
 
+  <center>  <P> <font color="black"> Tues. - Thu.: 10am to 5 pm <br>
+  Fri.: 10am to 8 pm <br>
+  Sat. - Sun.: noon to 5pm <br>
+  Closed Mondays & University Holidays. </p> <center>
+
 <div id="googleMap"></div>
 
 <!-- Add Google Maps -->
@@ -223,8 +228,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </a><br><br>
   <p>Contact the University of Kentucky Art Museum </p>
 <p>405 Rose St. <br>
-Lexington, KY 40508 </p>
-<p> 859.257.5716 </p>
+Lexington, KY 40508 <br>
+859.257.5716 </p>
 
 <h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
 
