--- a/about.html
+++ b/about.html
@@ -193,8 +193,8 @@
   </a><br><br>
   <p>Contact the University of Kentucky Art Museum </p>
 <p>405 Rose St. <br>
-Lexington, KY 40508 </p>
-<p> 859.257.5716 </p>
+Lexington, KY 40508 <br>
+859.257.5716 </p>
 
 <h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
 
