--- a/join&support.html
+++ b/join&support.html
@@ -185,9 +185,16 @@
   <h3 class="text-center">JOIN & SUPPORT</h3>
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
-<button type="button" class="btn btn-default">BECOME A MEMBER</button> </center>
+<button type="button" class="btn btn-default">BECOME A MEMBER</button>
+<button type="button" class="btn btn-default">GIFT SHOP</button> </center>
 
 <center>
+<br>
+<h4> <font color="white">Likes for Exposure Competition </h4>
+  <p> <font color="black"> Don't forget to submit your work for the Likes for Exposure Competition. For the month of May we are looking for work that emulates Natalie Frank. Make it your own, give it a twist, have fun and post to Instagram, tagging @UKArtMuseum with #NatalieFrankEmulation. We will then post your photo to our Facebook page. Whoever generates the most likes on Facebook and Instagram will have their work featured for the month of May in the Art Museum. Good luck! </p>
+  <br>
+<img src="./images/insta.jpg" alt="insta" width="400" height="600"/> <br>
+<br>
 <img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
 <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
 <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
@@ -204,8 +211,8 @@
   </a><br><br>
   <p>Contact the University of Kentucky Art Museum </p>
 <p>405 Rose St. <br>
-Lexington, KY 40508 </p>
-<p> 859.257.5716 </p>
+Lexington, KY 40508 <br>
+859.257.5716 </p>
 
 <h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
 
