--- a/join&support.html
+++ b/join&support.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme The Band</title>
+
+  <title>UKY Art Museum</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -191,7 +191,7 @@
 <center>
 <br>
 <h4> <font color="white">Likes for Exposure Competition </h4>
-  <p> <font color="black"> Don't forget to submit your work for the Likes for Exposure Competition. For the month of May we are looking for work that emulates Natalie Frank. Make it your own, give it a twist, have fun and post to Instagram, tagging @UKArtMuseum with #NatalieFrankEmulation. We will then post your photo to our Facebook page. Whoever generates the most likes on Facebook and Instagram will have their work featured for the month of May in the Art Museum. Good luck! </p>
+  <p> <font color="black"> Don't forget to submit your work for the Likes for Exposure Competition. For the month of May we are looking for work that emulates Natalie Frank. Make it your own, give it a twist, have fun and post to Instagram, tagging @UKYArtMuseum with #UKYNFEmulation. We will then post your photo to our Facebook page. Whoever generates the most likes on Facebook and Instagram will have their work featured for the month of May in the Art Museum. Good luck! </p>
   <br>
 <img src="./images/insta.jpg" alt="insta" width="400" height="600"/> <br>
 <br>
