--- a/home.html
+++ b/home.html
@@ -171,7 +171,7 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#events">EVENTS</a></li>
         <li><a href="#visit">VISIT</a></li>
-        <li><a href="#join&support">JOIN&SUPPORT</a></li>
+        <li><a href="#join_support">JOIN_SUPPORT</a></li>
         <li class="dropdown">
         </li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -253,14 +253,14 @@
           <div class="col-sm-4">
           <div class="thumbnail">
               <img src="./images/lawrence-tarpey.jpg" alt="lawrence-tarpey" width="400" height="300"/>
-              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/lawrence-tarpey-figures-ground"> <strong>Lawrence Tarpey: Figures & Ground</strong> </a> </p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/lawrence-tarpey-figures-ground"> <strong>Lawrence Tarpey: Figures and Ground</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
               <img src="./images/camera-drama.jpg" alt="camera-drama" width="400" height="300"/>
-              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Camera Drama: Eugene Meatyard & Duane</strong> </a> </p>
+              <p> <a href="http://finearts.uky.edu/art-museum/exhibitions/natalie-frank-brothers-grimm"> <strong>Camera Drama: Eugene Meatyard and Duane</strong> </a> </p>
               <p>May 6th 2016 - July 31st 2016</p>
         </div>
       </div>
@@ -309,7 +309,7 @@
   <center>  <P> <font color="black"> Tues. - Thu.: 10am to 5 pm <br>
   Fri.: 10am to 8 pm <br>
   Sat. - Sun.: noon to 5pm <br>
-  Closed Mondays & University Holidays. </p> <center>
+  Closed Mondays and University Holidays. </p> <center>
 
 <div id="googleMap"></div>
 
@@ -344,7 +344,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <br>
 <!-- Container (JOIN & SUPPORT Section) -->
 <div id="contact" class="container">
-  <h3 class="text-center">JOIN & SUPPORT</h3>
+  <h3 class="text-center">JOIN and SUPPORT</h3>
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
 <button type="button" class="btn btn-default">BECOME A MEMBER</button>
@@ -357,10 +357,21 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <br>
 <img src="./images/insta.jpg" alt="insta" width="400" height="600"/> <br>
 <br>
-  <img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
-  <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
-  <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
-  <img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center>
+<a href="http://www.facebook.com/artmuseumuk">
+  <img src= "./images/facebook.png" alt="facebook" width="50px" height="50px" />
+</a>
+
+<a href="https://twitter.com/ArtMuseumatUK">
+<img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+</a>
+
+<a href="https://www.instagram.com/ukyartmuseum/">
+<img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+</a>
+
+<a href="https://www.pinterest.com/artmuseumatuk/">
+<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/>
+</a> </center>
     </div>
   </div>
   <br>
@@ -372,13 +383,47 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>CONTACT US </p>
+
+<div class="row">
+  <div class= "col-xs-4"
+
+   <p> <text-align="left"> <b> - Hours - </b> </p>  <p> Tues. - Thu.: 10am to 5 pm <br>
+    Fri.: 10am to 8 pm <br>
+    Sat. - Sun.: noon to 5pm <br>
+    Closed Mondays and University Holidays. </p> <br>
+    <h2> FREE ADMISSION. <br> PAY ATTENTION.</h2>
+  </div>
+
+  <div class="row">
+    <div class= "col-xs-4"
+<p> <text-align="center"> CONTACT US </p>
   <img src="./images/logo.jpg" alt="logo" width="100" height="100"/>
 <p>405 Rose St. <br>
 Lexington, KY 40508 <br>
 859.257.5716 </p>
+</div>
 
-<h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
+<div class="row">
+  <div class= "col-xs-4"
+  <center>
+
+  <a href="http://www.facebook.com/artmuseumuk">
+    <img src= "./images/facebook.png" alt="facebook" width="50px" height="50px" />
+  </a>
+
+  <a href="https://twitter.com/ArtMuseumatUK">
+  <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+  </a>
+
+  <a href="https://www.instagram.com/ukyartmuseum/">
+  <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+  </a>
+
+  <a href="https://www.pinterest.com/artmuseumatuk/">
+  <img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/>
+  </a> </center>
+<h2> <text-align="right"> STAY CONNECTED </h2>
+</div>
 
 </footer>
 
