--- a/join&support.html
+++ b/join&support.html
@@ -171,7 +171,7 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#events">EVENTS</a></li>
         <li><a href="#visit">VISIT</a></li>
-        <li><a href="#join&support">JOIN&SUPPORT</a></li>
+        <li><a href="#join_support">JOIN_SUPPORT</a></li>
         <li class="dropdown">
         </li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -182,7 +182,7 @@
 
 <!-- Container (JOIN & SUPPORT Section) -->
 <div id="contact" class="container">
-  <h3 class="text-center">JOIN & SUPPORT</h3>
+  <h3 class="text-center">JOIN and SUPPORT</h3>
 <center>
 <button type="button" class="btn btn-default">DONATE</button>
 <button type="button" class="btn btn-default">BECOME A MEMBER</button>
@@ -195,10 +195,22 @@
   <br>
 <img src="./images/insta.jpg" alt="insta" width="400" height="600"/> <br>
 <br>
-<img src="./images/facebook.png" alt="facebook" width="50" height="50"/>
+
+<a href="http://www.facebook.com/artmuseumuk">
+  <img src= "./images/facebook.png" alt="facebook" width="50px" height="50px" />
+</a>
+
+<a href="https://twitter.com/ArtMuseumatUK">
 <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+</a>
+
+<a href="https://www.instagram.com/ukyartmuseum/">
 <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
-<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/> </center>
+</a>
+
+<a href="https://www.pinterest.com/artmuseumatuk/">
+<img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/>
+</a> </center>
     </div>
   </div>
   <br>
@@ -209,15 +221,49 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Contact the University of Kentucky Art Museum </p>
+
+<div class="row">
+  <div class= "col-xs-4"
+
+   <p> <text-align="left"> <b> - Hours - </b> </p>  <p> Tues. - Thu.: 10am to 5 pm <br>
+    Fri.: 10am to 8 pm <br>
+    Sat. - Sun.: noon to 5pm <br>
+    Closed Mondays and University Holidays. </p> <br>
+    <h2> FREE ADMISSION. <br> PAY ATTENTION.</h2>
+  </div>
+
+  <div class="row">
+    <div class= "col-xs-4"
+<p> <text-align="center"> CONTACT US </p>
+  <img src="./images/logo.jpg" alt="logo" width="100" height="100"/>
 <p>405 Rose St. <br>
 Lexington, KY 40508 <br>
 859.257.5716 </p>
+</div>
 
-<h2> <b>FREE ADMISSION.</b> PAY ATTENTION. </h2>
+<div class="row">
+  <div class= "col-xs-4"
+  <center>
+
+  <a href="http://www.facebook.com/artmuseumuk">
+    <img src= "./images/facebook.png" alt="facebook" width="50px" height="50px" />
+  </a>
+
+  <a href="https://twitter.com/ArtMuseumatUK">
+  <img src="./images/twitter.png" alt="twitter" width="50" height="50"/>
+  </a>
+
+  <a href="https://www.instagram.com/ukyartmuseum/">
+  <img src="./images/instagram.png" alt="instagram" width="50" height="50"/>
+  </a>
+
+  <a href="https://www.pinterest.com/artmuseumatuk/">
+  <img src="./images/pinterest.png" alt="pinterest" width="50" height="50"/>
+  </a> </center>
+<h2> <text-align="right"> STAY CONNECTED </h2>
+</div>
 
 </footer>
-
 <script>
 $(document).ready(function(){
   // Initialize Tooltip
